docs: improve READMEs format and clarity across monorepo