@@ -1,100 +1,74 @@
-# api/ — Backend do EdTech
+# ⚙️ EdTech Backend (API Restful)
 
-Backend principal do EdTech, responsável pelas regras de negócio, upload de documentos (Cloud Storage), controle de versões, segurança robusta com JWT/CSRF e geração de logs de auditoria imutáveis.
-
----
-
-## 🎯 Responsabilidade
-
-- Receber, validar e processar requisições HTTP do frontend.
-- Gerenciar upload de PDFs e datasets via Google Cloud Storage.
-- Controlar papéis e acessos granulares (Pesquisador, Orientador, Auditor).
-- Gerar Logs Inalteráveis de todas as operações sensíveis (inseridos sob RLS estrito).
-- Expor contratos de API coesos e bem estruturados.
+Este módulo abrange a **Inteligência Central** da plataforma EdTech. O backend atua como um escudo protetor para o Banco de Dados (PostgreSQL) e o sistema de arquivos distribuído na nuvem, encarregando-se da pesada lógica de governança.
 
 ---
 
-## 🛠️ Stack Tecnológica
+## 🎯 Objetivo
 
-| Tecnologia | Versão | Função |
-| :--- | :---: | :--- |
-| **Java** | 21 LTS | Linguagem principal, utilizando Virtual Threads (Project Loom) |
-| **Spring Boot** | 4.1.x | Framework web, injeção de dependência e Data JPA |
-| **Spring Security** | 6.x | Proteção de rotas, controle CORS e mitigação CSRF |
-| **Flyway** | 10.x | Versionamento e migrações do banco de dados relacional |
-| **PostgreSQL** | 15+ | Banco hospedado via Google Cloud SQL |
-| **Mockito / JUnit 5**| 5.x | Suíte de testes unitários e de integração |
+Garantir o isolamento e controle absoluto sobre os dados da pesquisa acadêmica. Suas premissas são:
+- Receber, desempacotar e injetar de forma segura datasets e PDFs em *Object Storages*.
+- Garantir a autorização correta mediante tokens JWT em rotas públicas e privadas.
+- Auditar ininterruptamente **todas** as ações (CRUDS), garantindo a existência de *Logs Imutáveis* necessários para o "Painel do Auditor".
 
 ---
 
-## 📂 Arquitetura em Camadas
+## 🛠️ Tecnologias Utilizadas
+
+Para garantir a robustez de uma aplicação *Enterprise Grade*, o ecossistema Spring foi adotado por completo:
+
+| Tecnologia | Função na Aplicação |
+| :--- | :--- |
+| **Java 21 LTS** | Linguagem principal. Utiliza a potência do *Project Loom (Virtual Threads)* para concorrência de alta escala em limites curtos de hardware. |
+| **Spring Boot 4.1.x** | Framework base, injeção de dependência e servidor Tomcat embutido. |
+| **Spring Security 6.x**| Segurança de APIs (Filtros de JWT, Headers CORS estritos e Anti-CSRF). |
+| **Spring Data JPA** | ORM (Hibernate) abstrato para comunicação fluida com o banco. |
+| **Flyway 10.x** | *Database Migration Tool* para versionamento declarativo das tabelas. |
+| **Google Cloud SDK** | Cliente nativo para integrações Cloud (Cloud Storage SDK). |
+| **JUnit 5 & Mockito** | Frameworks de testes (Unitários e de Integração) garantindo confiabilidade. |
+
+---
+
+## 🔒 Governança e Arquitetura de Nuvem
+
+O Backend é compilado no formato "Uber-Jar" (ou "Fat Jar") e encapsulado numa imagem Docker otimizada.
+
+**Tolerância a Falhas e Isolamento:**
+Esta API hospeda-se em um serviço escalável (Google Cloud Run) atuando com rede privada. Os dados repousam num banco *PostgreSQL* Cloud SQL invisível ao mundo exterior. Apenas a API, portando o *Google Cloud SQL Auth Proxy*, é capaz de injetar queries no banco.
+
+---
+
+## 📂 Arquitetura do Diretório
 
 ```text
 api/src/main/java/com/docvault/
-├── controller/     # Rotas HTTP, leitura de cookies CSRF e DTOs de entrada
-├── service/        # Regras de negócio, transações (Transactional)
-├── repository/     # Queries ao banco via Spring Data JPA
-├── model/          # Entidades mapeadas ao PostgreSQL (@Entity)
-├── dto/            # Objetos de Transferência de Dados (request/response)
-├── config/         # Beans (SecurityConfig, Flyway, GCS, Web)
-└── audit/          # Lógica de Logs de Auditoria injetada transversalmente
+├── config/         # Beans e injeções primárias (CloudStorage, Flyway, WebSecurity)
+├── controller/     # Endpoints HTTP (REST)
+├── dto/            # Data Transfer Objects para requests/responses JSON
+├── model/          # Classes e mapeamento de Entidades (JPA/Hibernate)
+├── repository/     # Interfaces de Queries estendendo JpaRepository
+├── service/        # Camada de transações e lógicas de negócios complexas
+└── audit/          # Implementação transversal para salvar rastros irrefutáveis
 ```
 
 ---
 
-## 🔒 Segurança e Conexão
+## 🚀 Como Executar
 
-O Backend conecta ao PostgreSQL de forma nativa e protegida na VPC do Google Cloud. Como as instâncias de banco de dados não possuem IP público, nosso Spring Boot (Cloud Run) atua como um escudo protetor através do Cloud SQL Auth Proxy, processando requisições REST públicas e orquestrando as regras de negócio via JWT.
+### Pré-Requisitos
+- Java 21 (JDK 21)
+- Maven
+- Banco PostgreSQL (Recomendado via Docker Compose da raiz)
 
-1. **Autenticação:** Cookies `HttpOnly`, `SameSite=Strict`.
-2. **Proteção:** Ativação dupla de segurança utilizando token Anti-CSRF (`XSRF-TOKEN`).
+### Passos Locais
 
----
-
-## 🚀 Como Rodar Localmente
-
-O backend requer variáveis de ambiente para injetar os provedores de nuvem (Storage) e o Banco de Dados.
-
-### 1. Com Docker Compose (Recomendado)
-
-```bash
-# Na raiz do projeto EdTech, copie as variáveis de exemplo
-cp infra/.env.example infra/.env
-
-# (Preencha POSTGRES_PASSWORD, JWT_SECRET e credenciais de nuvem em infra/.env)
-
-# Suba a infraestrutura completa
-docker compose --env-file infra/.env -f infra/docker-compose.yml up --build backend
-```
-
-O backend usará `db:5432` da rede interna.
-
-### 2. Com Maven CLI (Ambiente Dev)
-
-Exporte as variáveis localmente e rode:
-
-```bash
-cd docvault/api
-mvn spring-boot:run
-```
-
----
-
-## 🧪 Notas de Desenvolvimento e Testes (Java 21)
-
-Se estiver rodando a suíte de testes unitários localmente (`mvn test`), o framework do Mockito precisa de privilégios especiais devido ao encapsulamento restrito do Java 21. Nosso `pom.xml` já está configurado com a *JVM Arg* necessária no `maven-surefire-plugin`:
-`-XX:+EnableDynamicAgentLoading`.
-
----
-
-### Teste Rápido de Saúde (Cadastro)
-
-```bash
-curl -i -X POST http://localhost:8080/api/auth/register \
-  -H "Content-Type: application/json" \
-  -d '{
-    "name": "Local Admin",
-    "email": "admin@edtech.unb.br",
-    "password": "senha-local-forte"
-  }'
-```
+1. Na pasta raiz do monorepo, inicie o banco de dados:
+   ```bash
+   docker-compose up -d db
+   ```
+2. Acesse a pasta do backend e rode com o *Maven Wrapper*:
+   ```bash
+   cd docvault/api
+   ./mvnw spring-boot:run
+   ```
+3. A API inicializará na porta padrão `8080`.
